# open-trusted-data-initiative

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_PAGES.md  Gemfile  Makefile  README.md  define-dataset-tags.sh  publish-website.sh  update-main.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  bug_report2.yaml  docs_website_change.md  docs_website_change.yaml  generic_issue.yaml  question.yaml
.github/PULL_REQUEST_TEMPLATE/: docs_website_pr.md  general_code_pr.md
.github/workflows/: collect_metrics.yaml  test_dataset_explorer.yml  test_dataset_explorer_images.yml  test_dataset_explorer_samples.yml  test_license_validator.yml  test_license_validator_images.yml  test_license_validator_samples.yml
data-processing-notes/: README.md
docs/: _config.yml  about.markdown  catalog.markdown  contributing.markdown  dataset-requirements.markdown  index.markdown  introduction.markdown  move-files.sh  our-processing.markdown  references.markdown  trustworthiness.markdown  upload.markdown  what-is-a-trusted-dataset.markdown
docs/_domain/: advertising.markdown  agriculture.markdown  art.markdown  astronomy.markdown  automation.markdown  banking.markdown  biology.markdown  chemistry.markdown  climate.markdown  code.markdown  domain.markdown  domain_advertising.markdown  domain_agriculture.markdown  domain_art.markdown  domain_astronomy.markdown  (+58 more)
hf_tooling/: README.md
other-documentation/: README.md
src/iac/: pyproject.toml
src/src/: pyproject.toml
src/src/analytics/: huggingface_datacards.sql  otdi_scoring.sql  query.sql
src/src/catalog/: .env.example  README.md  package-lock.json  package.json
src/src/catalog/src/: App.js
src/src/catalog/src/components/: QueryResultsTable.js
src/src/catalog/src/config/: aws-config.js
src/src/catalog/src/services/: athenaService.js
src/src/connection_example/: pyproject.toml  query_example.py
src/src/huggingface_datacards/: Dockerfile  README.md  build.sh  push.sh  pyproject.toml  run.sh
src/src/huggingface_datacards/ddl/: create_tables.ddl
src/src/huggingface_datacards/src/: get_hf_datacards.py
src/src/huggingface_datasets/: Dockerfile  README.md  build.sh  push.sh  pyproject.toml  run.sh
src/src/huggingface_datasets/ddl/: create_table.ddl
src/src/huggingface_datasets/src/: get_hf_datasets.py
src/src/huggingface_datasets_detail/: Dockerfile  README.md  build.sh  push.sh  pyproject.toml  run.sh
src/src/huggingface_datasets_detail/ddl/: create_tables.ddl
src/src/huggingface_datasets_detail/src/: get_hf_datasets_detail.py
src/src/huggingface_models/: Dockerfile  build.sh  push.sh  pyproject.toml  run.sh
src/src/huggingface_models/ddl/: create_table.ddl
src/src/huggingface_models/src/: get_huggingface_models.py
src/src/mcp/: .gitignore  Dockerfile  README.md  build.sh  next_gem_data_catalog_schema.ddl  pyproject.toml  run.sh  test.sh
src/src/mcp/src/: next_gem_catalog.py
src/src/mcp/test/: test_next_gem_catalog.py
static-catalog/: .gitignore  Makefile  README.md  all-hf-licenses.json  all-hf-permissive-licenses.json  all-permissive-licenses.json  bad-licenses.json  bsd-all.csv  bsd-permissive.csv  duckdb-notes.md  environment.yml  hf-good-licenses-counts.json  hf_arabic.json  hf_catalan.json  hf_chinese.json  hf_english.json  hf_french.json  hf_german.json  hf_hindi.json  hf_hungarian.json  hf_italian.json  hf_japanese.json  hf_keywords.csv  hf_korean.json  hf_portuguese.json  hf_russian.json  hf_spanish.json  hf_turkish.json  hf_vietnamese.json  langs.txt  license-notes.md  pyproject.toml  what-we-learned.md
static-catalog/analysis/: README.md  keywords.ipynb  ranked_keywords.csv
static-catalog/data/reference/: all_licenses.json  all_permissive_licenses.json  biggest-keywords.csv  hf_keywords_count_desc.csv  interesting-keywords.csv  keyword-categories.json  license-id-name-mapping.json  spdx_licenses.json
static-catalog/src/catalog/: common.sh  copy-files-to-docs.sh
static-catalog/src/scripts/: .colors.sh  .log.sh  .util.sh  common.py  copy-files-to-docs.sh  load-into-duckdb.py  make-js-files.py  make-js-files.sh  make-license-id-mapping.sh  parquet-to-json.py  parquet-to-json.sh  parse-json.py  print-lines.sh  pyspark.sh  short-script.py  write-category-files.py  write-group-files.py  write-language-files.sh
tools-notes/: README.md
(+1976 files in other folders)
