[project]
name = "open-trusted-data-stack"
version = "0.0.1"
description = "Project to deploy Open and Trusted Data Initiative jobs"
authors = [
    {name = "The AI Alliance",email = "data@thealliance.ai"}
]
license = {text = "Apache License Version 2.0"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aws-cdk-lib (>=2.191.0,<3.0.0)",
    "constructs (>=10.4.2,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
