[tool.poetry]
name = "hf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
huggingface-hub = "^0.27.1"
pyarrow = "18.1.0"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
fastparquet = "^2024.11.0"
asyncio = "^3.4.3"
boto3 = "^1.36.19"
awswrangler = "^3.11.0"
aiohttp = "^3.11.12"
httpx = "^0.28.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
