[tool.poetry]
name = "OTD Catalog Connection Example"
version = "0.0.1"
description = "Example of connecting to the OTD Catalog using Python"
authors = ["AI Alliance Data Team <data@ai_alliance.com>"]
license = "Apache License Version 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.36.19"
awswrangler = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"